test/scc/expr/semantic-errors/112.a
112.t:8:9: error: passing argument 1 discards 'const' qualifier